--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.4",
     "axios": "^1.7.2",
     "cheerio": "^1.0.0-rc.12",
     "daisyui": "^4.12.10",
